--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     height: 600px;
     margin-top: 5%;
     border-radius: 20px;
-	background-color: #fff;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,9 +40,9 @@ body {
 
 .form-box h2 {
     text-align: center;
-    font-size: 2.4em;
-	color: black;
-	font-weight: bold;
+    font-size: 2.4em; 	
+    color: black;
+    font-weight: bold;
 }
 
 .input-box {
@@ -111,6 +111,7 @@ body {
 	text-transform: uppercase;
 	color: #fff;
 	font-weight: bold;
+	cursor:pointer;
 }
 
 .sign-up-using {
